css/styles.css
/* Template: Aria - Business HTML Landing Page Template
   Author: Inovatik
   Created: Jul 2019
   Description: Master CSS file
*/

/*****************************************
Table Of Contents:

01. General Styles
02. Preloader
03. Navigation
04. Header
05. Intro
06. Description
07. Services
08. Details 1
09. Details 2
10. Testimonials
11. Call Me
12. Projects
13. Project Lightboxes
14. Team
15. About
16. Contact
17. Footer
18. Copyright
19. Back To Top Button
20. Extra Pages
21. Media Queries
******************************************/

/*****************************************
Colors:

- Backgrounds - light gray #fbfbfb
- Background - dark blue #39635a
- Backgrounds navbar, footer - dark gray #b36205
- Buttons, bullets, icons - green #284952
- Headings text - black #484a46
- Body text - gray #787976
- Body text - light gray #dfe5ec
******************************************/


/******************************/
/*     01. General Styles     */
/******************************/
body,
html {
    width: 100%;
	height: 100%;
	overflow-x: hidden;
}

body, p {
	color: #787976; 
	font: 400 1rem/1.5625rem "Open Sans", sans-serif;
}

.p-large {
	font: 400 1.125rem/1.625rem "Open Sans", sans-serif;
}

.p-small {
	font: 400 0.875rem/1.375rem "Open Sans", sans-serif;
}

.p-heading {
	margin-bottom: 3.5rem;
	text-align: center;
}

.li-space-lg li {
	margin-bottom: 0.375rem;
}

.indent {
	padding-left: 1.25rem;
}

h1 {
	color: #484a46;
	font: 700 2.5rem/3rem "Montserrat", sans-serif;
}

h2 {
	color: #484a46;
	font: 700 1.75rem/2.125rem "Montserrat", sans-serif;
}

h3 {
	color: #484a46;
	font: 700 1.375rem/1.75rem "Montserrat", sans-serif;
}

h4 {
	color: #484a46;
	font: 700 1.25rem/1.625rem "Montserrat", sans-serif;
}

h5 {
	color: #484a46;
	font: 700 1.125rem/1.5rem "Montserrat", sans-serif;
}

h6 {
	color: #484a46;
	font: 700 1rem/1.375rem "Montserrat", sans-serif;
}

a {
	color: #787976;
	text-decoration: underline;
}

a:hover {
	color: #787976;
	text-decoration: underline;
}

a.green {
	color: #284952;
}

a.white,
.white {
	color: #dfe5ec;
}

.testimonial-text {
	font-style: italic;
}

.testimonial-author {
	font: 700 1rem/1.375rem "Montserrat", sans-serif;
}

strong {
	color: #484a46;
}

.section-title {
	color: #284952;
	font: 500 0.8125rem/1.125rem "Montserrat", sans-serif;
}

.btn-solid-reg {
	display: inline-block;
	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
	border: 0.125rem solid #284952;
	border-radius: 0.25rem;
	background-color: #284952;
	color: #fff;
	font: 700 0.75rem/0 "Montserrat", sans-serif;
	text-decoration: none;
	transition: all 0.2s;
}

.btn-solid-reg:hover {
	background-color: transparent;
	color: #284952;
	text-decoration: none;
}

.btn-solid-lg {
	display: inline-block;
	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
	border: 0.125rem solid #284952;
	border-radius: 0.25rem;
	background-color: #284952;
	color: #fff;
	font: 700 0.75rem/0 "Montserrat", sans-serif;
	text-decoration: none;
	transition: all 0.2s;
}

.btn-solid-lg:hover {
	background-color: transparent;
	color: #284952;
	text-decoration: none;
}

.btn-outline-reg {
	display: inline-block;
	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
	border: 0.125rem solid #787976;
	border-radius: 0.25rem;
	background-color: transparent;
	color: #787976;
	font: 700 0.75rem/0 "Montserrat", sans-serif;
	text-decoration: none;
	transition: all 0.2s;
}

.btn-outline-reg:hover {
	background-color: #787976;
	color: #fff;
	text-decoration: none;
}

.btn-outline-lg {
	display: inline-block;
	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
	border: 0.125rem solid #787976;
	border-radius: 0.25rem;
	background-color: transparent;
	color: #787976;
	font: 700 0.75rem/0 "Montserrat", sans-serif;
	text-decoration: none;
	transition: all 0.2s;
}

.btn-outline-lg:hover {
	background-color: #787976;
	color: #fff;
	text-decoration: none;
}

.btn-outline-sm {
	display: inline-block;
	padding: 1rem 1.625rem 0.9375rem 1.625rem;
	border: 0.125rem solid #787976;
	border-radius: 0.25rem;
	background-color: transparent;
	color: #787976;
	font: 700 0.75rem/0 "Montserrat", sans-serif;
	text-decoration: none;
	transition: all 0.2s;
}

.btn-outline-sm:hover {
	background-color: #787976;
	color: #fff;
	text-decoration: none;
}

.form-group {
	position: relative;
	margin-bottom: 1.25rem;
}

.form-group.has-error.has-danger {
	margin-bottom: 0.625rem;
}

.form-group.has-error.has-danger .help-block.with-errors ul {
	margin-top: 0.375rem;
}

.label-control {
	position: absolute;
	top: 0.8125rem;
	left: 1.375rem;
	color: #787976;
	opacity: 1;
	font: 400 0.875rem/1.375rem "Open Sans", sans-serif;
	cursor: text;
	transition: all 0.2s ease;
}

/* IE10+ hack to solve lower label text position compared to the rest of the browsers */
@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
	.label-control {
		top: 0.9375rem;
	}
}

.form-control-input:focus + .label-control,
.form-control-input.notEmpty + .label-control,
.form-control-textarea:focus + .label-control,
.form-control-textarea.notEmpty + .label-control {
	top: 0.125rem;
	opacity: 1;
	font-size: 0.75rem;
	font-weight: 500;
}

.form-control-input,
.form-control-select {
	display: block; /* needed for proper display of the label in Firefox, IE, Edge */
	width: 100%;
	padding-top: 1.25rem;
	padding-bottom: 0.25rem;
	padding-left: 1.3125rem;
	border: 1px solid #dadada;
	border-radius: 0.25rem;
	background-color: #fff;
	color: #787976;
	font: 400 0.875rem/1.375rem "Open Sans", sans-serif;
	transition: all 0.2s;
	-webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
}

.form-control-select {
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
	height: 3rem;
}
/* ... */

